[gd_scene load_steps=2 format=3 uid="uid://ce1ytu4ewuguy"]

[ext_resource type="Script" uid="uid://ddq4fg85ywk26" path="res://UI/acciones.gd" id="1_vul31"]

[node name="Acciones" type="Control"]
z_index = 10
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vul31")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Atacar" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Atacar"

[node name="Defender" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Defender"

[node name="Cancelar" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Cancelar"

[connection signal="button_down" from="PanelContainer/VBoxContainer/Atacar" to="." method="_on_atacar_button_down"]
[connection signal="button_down" from="PanelContainer/VBoxContainer/Defender" to="." method="_on_defender_button_down"]
[connection signal="button_down" from="PanelContainer/VBoxContainer/Cancelar" to="." method="_on_cancelar_button_down"]
